--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Codeenv</title>
+    <title>Codenv</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <main>
-      <form method="post" action="/update" target="preview">
+      <form method="post" target="preview" action="/preview">
         <div class="editor">
           <nav>
             <div class="tabs">
