--- a/preview.html
+++ b/preview.html
@@ -7,9 +7,11 @@
   </head>
   <body>
     <script>
-      navigator.serviceWorker.register("./service-worker.js").finally(() => {
-        location.reload();
-      });
+      navigator.serviceWorker
+        .register("./service-worker.js", { type: "module" })
+        .finally(() => {
+          location.reload();
+        });
     </script>
   </body>
 </html>
