--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Codenv</title>
+    <link
+      rel="modulepreload"
+      href="https://unpkg.com/prismjs@1.30.0/prism.js"
+    />
+    <link rel="modulepreload" href="./defaults.js" />
+
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
