--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <button type="submit">Save</button>
           </nav>
           <div class="panels">
-            <pre id="html"></pre>
-            <pre id="css"></pre>
-            <pre id="js"></pre>
+            <pre id="html" spellcheck="false"></pre>
+            <pre id="css" spellcheck="false"></pre>
+            <pre id="js" spellcheck="false"></pre>
           </div>
         </div>
 
